# simshop

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
notebooks/: exploration.ipynb
src/: policies.py
src/catalog/: generator.py
src/config/: config.py
src/data/: encoders.py
src/env/: __init__.py  interaction_env.py
src/interface/: app.py  emoji_mappings.py
src/models/: policies.py
src/recommenders/: __init__.py  advanced.py  baseline.py
src/scripts/: evaluate.py  generate_catalog.py  train.py
src/users/: __init__.py  base.py  brand_lover.py  cheap_seeker.py  familiarity_seeker.py  freshness_looker.py  random_chooser.py  value_optimizer.py
src/utils/: callbacks.py  logger.py  utils.py
