[project]
name = "simshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.3.0",
    "gymnasium>=1.1.1",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "stable-baselines3[extra]>=2.6.0",
    "streamlit>=1.45.1",
    "torch>=2.7.1",
    "wandb>=0.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "line-profiler>=4.2.0",
]
